[gd_scene load_steps=12 format=3 uid="uid://bw5bf1p7k0k1i"]

[ext_resource type="Script" path="res://Scenes/Scripts/intronecronomicon.gd" id="1_2atqa"]
[ext_resource type="PackedScene" uid="uid://d2grg3w6a5oeb" path="res://Models/necronomicon/source/libro evil dead.FBX" id="1_s55ve"]
[ext_resource type="PackedScene" uid="uid://cqgb640be7rtg" path="res://Scenes/exit_portal.tscn" id="2_mq203"]
[ext_resource type="AudioStream" uid="uid://0g7bi68edhkv" path="res://Sounds/introSound (mp3cut.net).mp3" id="3_cu4qc"]
[ext_resource type="AudioStream" uid="uid://bv8eb22u3udxa" path="res://Sounds/lectorZnow (audio-extractor (mp3cut.net).mp3" id="5_advoc"]

[sub_resource type="Animation" id="Animation_2ukqs"]
resource_name = "Fadeee"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0.156863)]
}

[sub_resource type="Animation" id="Animation_q3v62"]
resource_name = "Fadeeeout"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.156863), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_4fs12"]
resource_name = "NecroRotate"
length = 8.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Root Scene:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 3, 5, 7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(-1.686, -5, 0.742), Vector3(-1.686, 5, 0.742), Vector3(-1.686, -5, 0.742), Vector3(-1.686, 5, 0.742)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Root Scene:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 4, 6, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.5708, 0), Vector3(0, 3.14159, 0), Vector3(0, 4.71239, 0), Vector3(0, 6.28319, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DirectionalLight3D:light_energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.5, 0.5, 1.5]
}

[sub_resource type="Animation" id="Animation_q55wu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Root Scene:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.68622, 0, 0.742189)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Root Scene:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DirectionalLight3D:light_energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.458]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ubwgf"]
_data = {
"Fadeee": SubResource("Animation_2ukqs"),
"Fadeeeout": SubResource("Animation_q3v62"),
"NecroRotate": SubResource("Animation_4fs12"),
"RESET": SubResource("Animation_q55wu")
}

[sub_resource type="Environment" id="Environment_1ag3y"]
background_energy_multiplier = 0.32
sdfgi_enabled = true
fog_enabled = true
fog_light_color = Color(0, 0, 0, 1)

[node name="intronecronomicon" type="Node3D"]
script = ExtResource("1_2atqa")

[node name="Root Scene" parent="." instance=ExtResource("1_s55ve")]
transform = Transform3D(0.001, 0, 0, 0, 0.001, 0, 0, 0, 0.001, -1.68622, 0, 0.742189)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ubwgf")
}
autoplay = "Fadeee"

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ubwgf")
}
autoplay = "NecroRotate"

[node name="ExitPortal" parent="." instance=ExtResource("2_mq203")]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, -12.0113, 25.7475, 9.24757)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-0.955258, 0, 0.295775, 0, 1, 0, -0.295775, 0, -0.955258, 11.7002, 25.5258, -51.7805)

[node name="WorldEnvironment" type="WorldEnvironment" parent="Camera3D"]
environment = SubResource("Environment_1ag3y")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -41.3203)
light_energy = 0.458

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_cu4qc")
volume_db = -10.0
autoplay = true

[node name="AudioStreamPlayer3D2" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_advoc")
volume_db = 10.0
autoplay = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -320.0
offset_top = -272.0
offset_right = 2184.0
offset_bottom = 1280.0
color = Color(0, 0, 0, 1)

[node name="LectorTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="finished" from="AudioStreamPlayer3D2" to="." method="_on_audio_stream_player_3d_2_finished"]
[connection signal="timeout" from="LectorTimer" to="." method="_on_lector_timer_timeout"]
